# geohash_php_extension

./: Cargo.toml  Readme.md  build.rs  index.php  notes.txt
src/: lib.rs
src/functions/: geo_hash.rs  mod.rs
